--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "dev": "next dev",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma migrate deploy",
     "lint": "next lint",
     "start": "next start"
   },
